--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 /public/bundles/
 /var/
 /vendor/
+/public/.htaccess
+/.htaccess
+/.env
 ###< symfony/framework-bundle ###
 
 ###> phpunit/phpunit ###
