--- a/.env
+++ b/.env
@@ -25,7 +25,8 @@ APP_SECRET=61d4e07533bcc8e715f5ad4676c20644
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="mysql://ewrehrwf_root:=7+J9!c9=OIIyJuc@localhost/ewrehrwf_pokemon"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
